VFS-1672: Restored mobile menu toggle on anchor click

--- a/src/http/gui/app/styles/index.scss
+++ b/src/http/gui/app/styles/index.scss
@@ -19,6 +19,10 @@
       background: transparent;
       .col-left-atlas {
         margin-bottom: 60px;
+
+        .row-get-started-button {
+          margin-top: 40px;
+        }
       }
       .onedata-atlas {
         width: 100%;
