--- a/src/http/gui/app/styles/app.scss
+++ b/src/http/gui/app/styles/app.scss
@@ -175,3 +175,24 @@ html {
     text-align: right !important;
   }
 }
+
+// Buttons
+
+.btn-blue {
+  padding: 15px 30px;
+  text-transform: uppercase;
+  font-size: 0.7em;
+  color: white !important;
+  border-color: transparent !important;
+  background-color: $color-button;
+}
+
+.btn-index {
+  padding: 25px 55px;
+  text-transform: uppercase;
+  font-size: 1em;
+  letter-spacing: 0.15em;
+  color: white !important;
+  border-color: transparent !important;
+  background-color: #EF3C40;
+}
