--- a/src/http/gui/app/templates/components/spaces-accordion.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion.hbs
@@ -22,7 +22,7 @@
   </div>
 
   <div class="sidebar-row space-add-read-more-row">
-    {{#bs-button type="primary"}}
+    {{#bs-button type="blue"}}
       {{t 'onezone.spacesAccordion.readMore'}}
     {{/bs-button}}
   </div>
