--- a/src/http/gui/app/styles/onezone.scss
+++ b/src/http/gui/app/styles/onezone.scss
@@ -214,7 +214,9 @@ $search-box-height: 36px;
   }
 
   .accordion-container {
-    height: 100%;
+    position: absolute;
+    top: 80px;
+    bottom: 0;
     overflow-y: auto;
     overflow-x: hidden;
   }
