VFS-1672: New rendering of social icons in onezone

--- a/src/http/gui/app/styles/colors.scss
+++ b/src/http/gui/app/styles/colors.scss
@@ -19,6 +19,13 @@ $color-pale-yellow: #FDCD58;
 $color-yellow: #F6A500;
 $color-green: #4DC249;
 
+$color-login-github: #1E2325;
+$color-login-twitter: #6ED3F3;
+$color-login-plgrid: #026381;
+$color-login-google: #F1514F;
+$color-login-dropbox: #86D7F2;
+$color-login-facebook: #5B87C5;
+
 // TODO: all colors as classes - use functions
 
 .color-red-1 {
