--- a/src/http/gui/app/templates/components/account-add.hbs
+++ b/src/http/gui/app/templates/components/account-add.hbs
@@ -1,4 +1,4 @@
-<div class="account-icon">
+<div class="account-icon account-add-icon">
   {{one-icon icon='add'}}
 </div>
 <div class="account-label connect-new">
