--- a/src/http/gui/app/templates/components/account-item.hbs
+++ b/src/http/gui/app/templates/components/account-item.hbs
@@ -1,7 +1,10 @@
-<div class="account-icon" style="background-image: url({{typeIcon}});"></div>
+{{!-- <div class="account-icon" style="background-image: url({{typeIcon}});"></div> --}}
+<div class="account-icon">
+  <div class="circle {{type}}"></div>
+  <div class="icon">
+    {{one-icon icon=iconName}}
+  </div>
+</div>
 <div class="account-label">
   {{label}}
 </div>
-{{#if accepted}}
-  <div class="account-accepted"></div>
-{{/if}}
