VFS-1672: New homepage account dropdown style

--- a/src/http/gui/app/styles/colors.scss
+++ b/src/http/gui/app/styles/colors.scss
@@ -26,6 +26,10 @@ $color-login-google: #F1514F;
 $color-login-dropbox: #86D7F2;
 $color-login-facebook: #5B87C5;
 
+$color-dropdown-menu-bg: #2B3037;
+// color from screenshot: #F35154;
+$color-dropdown-menu-bg-hover: $color-red-2;
+
 // TODO: all colors as classes - use functions
 
 .color-red-1 {
