--- a/src/http/gui/app/templates/components/main-menu.hbs
+++ b/src/http/gui/app/templates/components/main-menu.hbs
@@ -17,9 +17,9 @@
       <span class="account-label">{{session.opData.sessionDetails.userName}} <span class="caret"></span></span>
     </a>
     <ul class="dropdown-menu">
-      <li>{{main-menu-item linkTo='onezone' titleI18n='application.onezone'}}</li>
+      {{main-menu-item linkTo='onezone' titleI18n='application.onezone'}}
       <li role="separator" class="divider"></li>
-      <li>{{main-menu-item linkTo='home.logout' titleI18n='application.logout'}}</li>
+      {{main-menu-item linkTo='home.logout' titleI18n='application.logout'}}
     </ul>
   </li>
 {{/if}}
