--- a/src/http/gui/app/templates/components/main-menu.hbs
+++ b/src/http/gui/app/templates/components/main-menu.hbs
@@ -10,7 +10,7 @@
   {{/if}}
 {{/each}}
 {{#if session.isAuthenticated}}
-  <li class="dropdown">
+  <li class="dropdown account-menu">
     {{!-- TODO: beware long user names --}}
     <a href="#" class="dropdown-toggle account-dropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
       <span class="account-icon">{{one-icon icon="user-profile"}}</span>
