VFS-1672: Dropdown style fixes

--- a/src/http/gui/app/styles/main-menu.scss
+++ b/src/http/gui/app/styles/main-menu.scss
@@ -155,6 +155,10 @@ $dropdown-radius: 6px;
     }
 
     .dropdown-menu {
+      position: absolute;
+      left: auto;
+      right: 0;
+      min-width: 150px;
       font-size: inherit;
       // TODO: mobile menu color variable
       background-color: $color-dropdown-menu-bg;
