--- a/src/http/gui/app/templates/components/main-menu.hbs
+++ b/src/http/gui/app/templates/components/main-menu.hbs
@@ -16,7 +16,7 @@
       <span class="account-icon">{{one-icon icon="user-profile"}}</span>
       <span class="account-label">{{session.opData.sessionDetails.userName}} <span class="caret"></span></span>
     </a>
-    <ul class="dropdown-menu">
+    <ul class="dropdown-menu dropdown-menu-down dropdown-menu-list">
       {{main-menu-item linkTo='onezone' titleI18n='application.onezone'}}
       <li role="separator" class="divider"></li>
       {{main-menu-item linkTo='home.logout' titleI18n='application.logout'}}
