--- a/src/http/gui/app/styles/app.scss
+++ b/src/http/gui/app/styles/app.scss
@@ -196,3 +196,110 @@ html {
   border-color: transparent !important;
   background-color: #EF3C40;
 }
+
+
+// TODO: move to separate file
+
+$dropdown-radius: 6px;
+$dropdown-triangle-width: 20px;
+
+.dropdown-menu {
+  position: absolute;
+  padding: 15px;
+  background-color: $color-dropdown-menu-bg;
+  border-radius: $dropdown-radius !important;
+  border-color: transparent;
+
+  &.dropdown-menu-down {
+    left: auto;
+    right: 0;
+    min-width: 150px;
+
+    &:before {
+      position: absolute;
+      top: -$dropdown-triangle-width;
+      right: 10px;
+      display: inline-block;
+      border-right: $dropdown-triangle-width solid transparent;
+      border-bottom: $dropdown-triangle-width solid #ccc;
+      border-left: $dropdown-triangle-width solid transparent;
+      border-bottom-color: #2B3037;
+      content: '';
+    }
+  }
+
+  &.dropdown-menu-right {
+    left: 100%;
+    top: -50%;
+    min-width: 150px;
+    border-top-left-radius: 0 !important;
+
+    &:before {
+      position: absolute;
+      top: 0;
+      left: 2 * (-$dropdown-triangle-width);
+      border-bottom: $dropdown-triangle-width solid transparent;
+      border-right: $dropdown-triangle-width solid #2B3037;
+      border-left: $dropdown-triangle-width solid transparent;
+      content: '';
+
+      // // old version
+      // position: absolute;
+      // top: 10px;
+      // left: 2 * (-$dropdown-triangle-width);
+      // border-bottom: $dropdown-triangle-width solid transparent;
+      // border-right: $dropdown-triangle-width solid #2B3037;
+      // border-left: $dropdown-triangle-width solid transparent;
+      // border-top: $dropdown-triangle-width solid transparent;
+      // content: '';
+    }
+  }
+
+  &.dropdown-menu-list {
+    font-size: inherit;
+    padding: 0;
+
+    .divider {
+      // TODO: same as menu bottom line color
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+
+    > li:not(.divider) {
+      &:first-child {
+        border-top-left-radius: $dropdown-radius;
+        border-top-right-radius: $dropdown-radius;
+      }
+
+      &:last-child {
+        border-bottom-left-radius: $dropdown-radius;
+        border-bottom-right-radius: $dropdown-radius;
+      }
+
+      > a {
+        color: $top-font-color !important;
+        padding: 10px;
+        &:hover {
+          color: white !important;
+          background-color: transparent !important;
+        }
+      }
+
+      &:hover {
+        background-color: $color-dropdown-menu-bg-hover;
+      }
+    }
+
+    > .divider {
+      padding: 0;
+      margin: 0;
+    }
+  }
+
+}
+//
+// .side-cont {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   right:0
+// }
