--- a/src/http/gui/app/templates/onezone.hbs
+++ b/src/http/gui/app/templates/onezone.hbs
@@ -4,6 +4,10 @@
   providers=model.providers spaces=model.spaces authorizers=model.authorizers}}
 {{onezone-top-bar tagName='header' class='onezone-top-bar'}}
 
+{{!-- <div class="side-cont">
+
+</div> --}}
+
 <div class="onezone-container-application">
   <div class="onezone-container-application-inner">
     {{#onezone-atlas}}
