VFS-1672: Providers redirection URL from server; other small fixes

--- a/src/http/gui/app/templates/components/spaces-accordion-item.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion-item.hbs
@@ -1,17 +1,28 @@
 <div class="accordion-group spaces-accordion-group">
   <div class="accordion-heading spaces-accordion-heading">
-    <a class="accordion-toggle spaces-accordion-toggle" data-toggle="collapse" href="#collapse-space-{{space.id}}">
-      <div class="space-icon">
+    <a class="accordion-toggle spaces-accordion-toggle">
+      <div class="" data-toggle="collapse" href="#collapse-space-{{space.id}}">
+        <div class="space-icon">
+          {{#if space.isDefault}}
+            {{one-icon icon='space-default'}}
+          {{else}}
+            {{one-icon icon='space'}}
+          {{/if}}
+        </div>
+        <div class="space-header">
+          {{space.name}}
+        </div>
+      </div>
+      <div class="star-toggle" {{action "toggleDefault"}}>
         {{#if space.isDefault}}
-          {{one-icon icon='space-default'}}
+          {{one-icon icon="star"}}
         {{else}}
-          {{one-icon icon='space'}}
+          <div class="star-empty">
+            {{one-icon icon="star-empty"}}
+          </div>
         {{/if}}
       </div>
-      <div class="space-header">
-        {{space.name}}
-      </div>
-      <div class="providers-count">
+      <div class="providers-count" data-toggle="collapse" href="#collapse-space-{{space.id}}">
         <div class="icon">
           {{one-icon icon="provider"}}
         </div>
