--- a/src/http/gui/app/templates/onezone/index.hbs
+++ b/src/http/gui/app/templates/onezone/index.hbs
@@ -1,8 +1,1 @@
-{{#panel-onezone title="onezone.messages.noneProviders.title" useI18n=true type="alert"}}
-  {{t 'onezone.messages.noneProviders.text'}}
-  <ol>
-    <li>You have</li>
-    <li>You will be</li>
-    <li>You have created</li>
-  </ol>
-{{/panel-onezone}}
+{{onezone-modal-container providers=model}}
