VFS-1672: Stub of connect new account (experimental)

--- a/src/http/gui/app/templates/components/account-add.hbs
+++ b/src/http/gui/app/templates/components/account-add.hbs
@@ -1,6 +1,8 @@
-<div class="account-icon account-add-icon">
-  {{one-icon icon='add'}}
-</div>
-<div class="account-label connect-new">
-  {{t 'onezone.accountAdd.connectNewAccount'}}
-</div>
+<a {{action "connectNewAccount" "github"}}>
+  <div class="account-icon account-add-icon">
+    {{one-icon icon='add'}}
+  </div>
+  <div class="account-label connect-new">
+    {{t 'onezone.accountAdd.connectNewAccount'}}
+  </div>
+</a>
