--- a/src/http/gui/app/templates/onezone.hbs
+++ b/src/http/gui/app/templates/onezone.hbs
@@ -1,7 +1,8 @@
 <div class="onezone-fog"></div>
 
 {{onezone-sidebar tagName='nav' class='onezone-sidebar'
-  providers=model.providers spaces=model.spaces authorizers=model.authorizers}}
+  providers=model.providers spaces=model.spaces authorizers=model.authorizers
+  expandAccounts=expandAccounts}}
 {{onezone-top-bar tagName='header' class='onezone-top-bar'}}
 
 {{!-- <div class="side-cont">
