VFS-1672: Wider get token popup

--- a/src/http/gui/app/styles/onezone.scss
+++ b/src/http/gui/app/styles/onezone.scss
@@ -491,6 +491,18 @@ $search-box-height: 36px;
           .icon {
             text-align: center;
           }
+
+          // TODO: make dynamic
+          .token-popup {
+            width: 640px;
+
+            input {
+              width: 100%;
+              border: none;
+              background-color: inherit;
+              color: white;
+            }
+          }
         }
       }
     }
