--- a/src/http/gui/app/templates/components/spaces-accordion-item.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion-item.hbs
@@ -63,7 +63,7 @@
                 {{t 'onezone.spacesAccordionItem.getSupport'}}
               </div>
             </a>
-            <div class="dropdown-menu dropdown-menu-right floater">
+            <div class="dropdown-menu dropdown-menu-right token-popup floater">
               {{!-- TODO: style and copy button --}}
               {{!-- TODO: loading icon --}}
               {{input value=supportToken readonly=true}}
