VFS-1672: Dropbox login icon

--- a/src/http/gui/app/styles/app.scss
+++ b/src/http/gui/app/styles/app.scss
@@ -180,6 +180,13 @@ html {
   }
 }
 
+.xs-center {
+  @include respond-to(screen-xs) {
+    text-align: center !important;
+  }
+}
+
+
 .hover-visible:not(:hover) {
   display: none;
 }
