--- a/src/http/gui/app/templates/onezone.hbs
+++ b/src/http/gui/app/templates/onezone.hbs
@@ -2,6 +2,7 @@
 
 {{onezone-sidebar tagName='nav' class='onezone-sidebar'
   providers=model.providers spaces=model.spaces authorizers=model.authorizers
+  tokens=model.clienttokens
   expandAccounts=expandAccounts}}
 {{onezone-top-bar tagName='header' class='onezone-top-bar'}}
 
