--- a/src/http/gui/app/templates/components/onezone-sidebar.hbs
+++ b/src/http/gui/app/templates/components/onezone-sidebar.hbs
@@ -42,9 +42,23 @@
         </a>
       </div>
       <!-- TODO collapse in -->
-      <div id="collapse-files" class="accordion-body main-accordion-body collapse in">
+      <div id="collapse-files" class="accordion-body main-accordion-body collapse">
         <div class="accordion-inner">
           {{providers-accordion providers=providers}}
+        </div>
+      </div>
+    </div>
+    <div class="accordion-group main-accordion-group">
+      <div class="accordion-heading main-accordion-heading">
+        <a class="accordion-toggle main-accordion-toggle" data-toggle="collapse" href="#collapse-tokens">
+          <h1>{{t 'onezone.sidebar.tokensHead'}}</h1>
+          <div class="arrow-down"></div>
+        </a>
+      </div>
+      <!-- TODO collapse in -->
+      <div id="collapse-tokens" class="accordion-body main-accordion-body collapse">
+        <div class="accordion-inner">
+          {{tokens-list tokens=tokens}}
         </div>
       </div>
     </div>
