--- a/src/http/gui/app/styles/main-menu.scss
+++ b/src/http/gui/app/styles/main-menu.scss
@@ -4,6 +4,10 @@
   border-bottom: 2px solid rgba(100%, 100%, 100%, 0.1);
   height: $top-height-collapsed;
 
+  &.navbar-onezone {
+    border-bottom: none;
+  }
+
   .navbar-brand {
     position: absolute;
     padding: 0;
@@ -39,7 +43,7 @@
     }
   }
 
-  .navbar-collapse {
+  .navbar-collapse-homepage {
     text-align: center;
     position: relative;
   }
@@ -125,16 +129,18 @@
           // the bottom red line is rendered with "after"
           // border-bottom: 3px solid $color-red-1;
 
-          // the bottom red line - is "after" because we need to cover a menu line
-          &::after {
-            color: transparent;
-            content: '.';
-            display: block;
-            border-bottom: 3px $color-red-1 solid;
-            padding: 0;
-            margin-left: -15px;
-            margin-right: -15px;
-            margin-top: -2px;
+          &:not(.dropdown-toggle) {
+            // the bottom red line - is "after" because we need to cover a menu line
+            &::after {
+              color: transparent;
+              content: '.';
+              display: block;
+              border-bottom: 3px $color-red-1 solid;
+              padding: 0;
+              margin-left: -15px;
+              margin-right: -15px;
+              margin-top: -2px;
+            }
           }
         }
       }
