--- a/src/http/gui/app/templates/components/top-bar.hbs
+++ b/src/http/gui/app/templates/components/top-bar.hbs
@@ -7,7 +7,7 @@
     {{navbar-toggle enableCloseMenuButton=false}}
     {{!-- TODO: logo color is too saturized --}}
   </div>
-  <div id="navbar" class="collapse navbar-collapse">
+  <div id="navbar" class="collapse navbar-collapse navbar-collapse-homepage">
     {{main-menu}}
     {{!-- A navbar toggle, which is visible only when menu is toggled (uncollapsed) --}}
     {{!-- Using this, because the button should be "glued" to toggled menu --}}
