VFS-1713: Centered login buttons

--- a/src/http/gui/app/templates/home/login.hbs
+++ b/src/http/gui/app/templates/home/login.hbs
@@ -6,20 +6,22 @@
       <div class="container-fluid login-buttons-container">
         <div class="row row-centered">
           <div class="col-xs-11 col-centered">
-            <div class="col-xs-12 col-sm-2 col-centered xs-center">
-              {{social-box type='plgrid' action='authenticate'}}
-            </div>
-            <div class="col-xs-6 col-sm-2 col-centered xs-right">
-              {{social-box type='dropbox' action='authenticate'}}
-            </div>
-            <div class="col-xs-6 col-sm-2 col-centered xs-left">
-              {{social-box type='github' action='authenticate'}}
-            </div>
-            <div class="col-xs-6 col-sm-2 col-centered xs-right">
-              {{social-box type='facebook' action='authenticate'}}
-            </div>
-            <div class="col-xs-6 col-sm-2 col-centered xs-left">
-              {{social-box type='google' action='authenticate'}}
+            <div class="row row-centered">
+              <div class="col-xs-12 col-sm-2 col-centered xs-center">
+                {{social-box type='plgrid' action='authenticate'}}
+              </div>
+              <div class="col-xs-6 col-sm-2 col-centered xs-right">
+                {{social-box type='dropbox' action='authenticate'}}
+              </div>
+              <div class="col-xs-6 col-sm-2 col-centered xs-left">
+                {{social-box type='github' action='authenticate'}}
+              </div>
+              <div class="col-xs-6 col-sm-2 col-centered xs-right">
+                {{social-box type='facebook' action='authenticate'}}
+              </div>
+              <div class="col-xs-6 col-sm-2 col-centered xs-left">
+                {{social-box type='google' action='authenticate'}}
+              </div>
             </div>
           </div>
         </div>
