--- a/src/http/gui/app/templates/components/spaces-accordion.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion.hbs
@@ -13,7 +13,7 @@
         </div>
         <div class="space-header">
           {{#if createNewSpaceEditing}}
-            {{input action='endCreateNewSpace'}}
+            {{input enter='endCreateNewSpace'}}
           {{else}}
             {{t 'onezone.spacesAccordion.createNewSpace'}}
           {{/if}}
