--- a/src/http/gui/app/styles/onezone.scss
+++ b/src/http/gui/app/styles/onezone.scss
@@ -22,6 +22,8 @@ $color-onezone-search: #2A2A2A;
 $color-onezone-panel-heading: $color-red-1;
 $color-onezone-panel-body: #60687E;
 
+$color-onezone-panel-hover: rgba(255, 255, 255, 0.1);
+
 .color-provider-working {
   color: $color-provider-working;
 }
@@ -188,8 +190,13 @@ $search-box-height: 36px;
 
   input {
     border: none;
-    background-color: inherit;
+    background: #2A2A2A;
     color: white;
+    padding-left: 4px;
+    padding-right: 4px;
+    &:focus {
+      outline: none;
+    }
   }
 
   .brand {
@@ -379,6 +386,7 @@ $search-box-height: 36px;
         padding: 0;
         margin: 0;
         line-height: $spaces-item-height;
+        background: inherit;
       }
     }
     .select-button {
