VFS-1638 large refactor of adapter & server service & session service

--- a/src/http/gui/app/templates/components/main-menu.hbs
+++ b/src/http/gui/app/templates/components/main-menu.hbs
@@ -14,7 +14,7 @@
     {{!-- TODO: beware long user names --}}
     <a href="#" class="dropdown-toggle account-dropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
       <span class="account-icon">{{one-icon icon="user-profile"}}</span>
-      <span class="account-label">{{session.opData.sessionDetails.userName}} <span class="caret"></span></span>
+      <span class="account-label">{{session.sessionDetails.userName}} <span class="caret"></span></span>
     </a>
     <ul class="dropdown-menu dropdown-menu-down dropdown-menu-list">
       {{main-menu-item linkTo='onezone' titleI18n='application.onezone'}}
