--- a/src/http/gui/app/styles/app.scss
+++ b/src/http/gui/app/styles/app.scss
@@ -33,7 +33,9 @@ $body-font-size: 14pt;
 $title-font: 'Myriad Pro Semibold';
 $body-font: 'Open Sans';
 
-@import "oneicons";
+$icomoon-font-path: "fonts/oneicons";
+@import "oneicons/style.scss";
+
 @import "colors";
 @import "fonts";
 @import "owl-carousel";
