--- a/src/http/gui/app/styles/onezone.scss
+++ b/src/http/gui/app/styles/onezone.scss
@@ -655,7 +655,7 @@ $search-box-height: 36px;
         text-align: center;
         padding: 0;
         color: white;
-        font-size: 1em;
+        font-size: 30px;
         background-color: none !important;
       }
     }
