VFS-1768: Clean up and binding fix

--- a/src/http/gui/app/templates/onezone.hbs
+++ b/src/http/gui/app/templates/onezone.hbs
@@ -2,8 +2,7 @@
 
 {{onezone-sidebar tagName='nav' class='onezone-sidebar'
   providers=model.providers spaces=model.spaces authorizers=model.authorizers
-  tokens=model.clienttokens
-  expandAccounts=expandAccounts}}
+  tokens=model.clienttokens}}
 {{onezone-top-bar tagName='header' class='onezone-top-bar'}}
 
 <div class="onezone-container-application">
